@@ -306,4 +306,5 @@ RAYPATH		path to search for \-f and \-M files
 Greg Ward
 .SH "SEE ALSO"
 cnt(1), genklemsamp(1), getinfo(1), pcomb(1), pfilt(1), ra_rgbe(1),
-rcalc(1), rpict(1), rsensor(1), rtrace(1), total(1), vwrays(1), ximage(1)
+rcalc(1), rfluxmtx(1), rmtxop(1),
+rpict(1), rsensor(1), rtrace(1), total(1), vwrays(1), ximage(1)
