@@ -142,4 +142,4 @@ rmtxop -fa orig.mtx | rcollate -ho -oc 1 | rcalc [opertions]
 Greg Ward
 .SH "SEE ALSO"
 cnt(1), histo(1), neaten(1), rcalc(1), rcollate(1),
-rlam(1), tabfunc(1), total(1)
+rcontrib(1), rfluxmtx(1), rlam(1), tabfunc(1), total(1)
